description and button

--- a/templates/Quest/active_quests.html
+++ b/templates/Quest/active_quests.html
@@ -4,6 +4,7 @@
 
     <div class="jumbotron">
   <h1 class="display-4">{{ active_quest.name }}</h1>
+        <p>{{ active_quest.description }}</p>
   <a class="btn btn-primary btn-lg" href="{% url 'quest_url' active_quest.id %}" role="button">Перейти</a>
 </div>
 {% endfor %}
