--- a/templates/base.html
+++ b/templates/base.html
@@ -24,9 +24,9 @@
 
 <body>
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-  <a class="navbar-brand" style="margin:-10px 0px">
+  <p class="navbar-brand" style="margin:-10px 0px" onclick="window.location.href='/'">
 Квесты
-  </a>
+  </p>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
